# az-wp-inst

./: .gitignore  Makefile  PREREQUISITES.md  README.md  ansible.cfg  ansible_vars.json.example  pyproject.toml  terraform.tfvars.json.example  user_vars.tfvars.json.example
.github/workflows/: release-deployer.yml  release.yml
config-backup/: user_vars.tfvars.json
config-starter/: Makefile  main.go
configuration_management/: README.md  inventory.yml  vault.yml.example
configuration_management/playbooks/: aws-os-npe.yml  site.yml  update.yml
deployer/: .env.example  Cargo.toml  Makefile
deployer/.cargo/: config.toml
deployer/migrations/: 001_initial.sql  002_drop_sp_columns.sql  003_add_admin_public_key.sql
deployer/src/: html.rs  main.rs
deployer/src/models/: deployment.rs  mod.rs  user.rs
deployer/src/routes/: auth.rs  dashboard.rs  deploy.rs  mod.rs
deployer/src/services/: mod.rs  orchestrator.rs  semaphore.rs
deployer/templates/: base.html  dashboard.html  deploy_detail.html  deploy_new.html  login.html
deployer/templates/partials/: status_badge.html
devops/mysql/: parameters.json
devops/mysql2/: parameters.json  template.json
devops/ubuntu/: parameters.json  template.json
provisioning/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
provisioning/aws/: main.tf
provisioning/modules/compute/: main.tf  outputs.tf  variables.tf
provisioning/modules/database/: main.tf  variables.tf
semaphore/playbooks/: site.yml  update.yml
semaphore/provisioning/: main.tf
(+37 files in other folders)
